--- a/admin_interface/locale/ru/LC_MESSAGES/django.po
+++ b/admin_interface/locale/ru/LC_MESSAGES/django.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: admin_interface/admin.py
 msgid "Environment"
-msgstr "Окружение"
+msgstr "Окружка!"
 
 #: admin_interface/admin.py
 msgid "Language chooser"
